changes in friends

--- a/views/friends.ejs
+++ b/views/friends.ejs
@@ -36,10 +36,10 @@
         for(var a=0;a<window.user.friends.length;a++){
             var data =window.user.friends[a];
             html+='<li>';
-                html+='<div class="nearly-pepls>';
+                html+='<div class="nearly-pepls">';
                     html+='<figure>';
-                        html+='<a href="/">';
-                            html+='<img src"'+mainURL+'/'+data.profileImage+'">';
+                            html+='<a href="/">';
+                            html += '<img src="' + mainURL + '/' + data.profileImage + '">';
                         html+='</a>';
                     html+='</figure>';
                     html+='<div class="pepl-info">';
