--- a/views/search.ejs
+++ b/views/search.ejs
@@ -10,8 +10,8 @@
 						<ul class="nav nav-tabs">
 							<li>
 								<a class="active" data-toggle="tab" href="#people">People</a>
-								<a data-toggle="tab" href="#pages">Pages</a>
-								<a data-toggle="tab" href="#groups">Groups</a>
+								<!-- <a data-toggle="tab" href="#pages">Pages</a>
+								<a data-toggle="tab" href="#groups">Groups</a> -->
 							</li>
 						</ul>
 					</div>
