--- a/views/search.ejs
+++ b/views/search.ejs
@@ -10,8 +10,8 @@
 						<ul class="nav nav-tabs">
 							<li>
 								<a class="active" data-toggle="tab" href="#people">People</a>
-								<!-- <a data-toggle="tab" href="#pages">Pages</a>
-								<a data-toggle="tab" href="#groups">Groups</a> -->
+								<a data-toggle="tab" href="#pages">Pages</a>
+								<a data-toggle="tab" href="#groups">Groups</a>
 							</li>
 						</ul>
 					</div>
@@ -95,7 +95,7 @@
 									}
 									else
 									{
-										html+=html+='<a href="javascript:void(0);" data-id="'+data._id+'" onclick="sendFriendRequest(this);" class="add-butn">Add Friend</a>';
+										html+='<a href="javascript:void(0);" data-id="'+data._id+'" onclick="sendFriendRequest(this);" class="add-butn">Add friend</a>';
 									}
 
 								html += '</div>';
@@ -122,7 +122,8 @@
 		ajax.onreadystatechange==function(){
 			if(this.readyState==4&&this.status==200){
 				var response=JSON.parse(this.responseText);
-				alert(response.message);
+				alert("friend request sent");
+				// alert(response.message);
 				self.remove();//remove friend req button
 
 			}
