--- a/views/pages.ejs
+++ b/views/pages.ejs
@@ -36,9 +36,31 @@
                     return;
                 }
                 var html="";
-                
+                for(var a=0;a<response.data.length;a++)
+                {
+                    var data=response.data[a];
+               
+                html+='<li>';
+                    html+='<div class="f-page">';
+                        html+='<figure>';
+                            html+='<a href="/page/'+data._id+'">';
+                                html+='<img src="'+mainURL+'/'+data.coverPhoto+'"style="width:205px;height:183px;object-fit:cover;">';
+                            html+='</a>';
+                            html+='<em>'+data.likers.length+'likes</em>';
+                            html+='</figure>';
+                            html+='<div class="page-infos">';
+                                html+='<h5><a href="/page/'+data._id+'">'+data.name+'</a></h5>';
+                                html+='<span>'+data.additionalInfo+'</span>';
+                            html+='</div>';
+                            html+='</div>';
+                            html+='</li>';
+                        }
+                        document.getElementById("all-pages").innerHTML=html;
             }
         }
+        var formData=new FormData();
+        formData.append("accessToken",localStorage.getItem("accessToken"));
+        ajax.send(formData);
     }
 </script>
 <%- include("includes/footer") %>
