done pages expect like near cover photo

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -50,6 +50,9 @@
 						if(typeof isPageDetail!="undefined"&&isPageDetail){
 							getPageDetail();
 						}
+						if(typeof isRightSidebar!="undefined"&&isRightSidebar){
+							getMyPages();
+						}
 
 					} else {
 						localStorage.removeItem("accessToken");
