--- a/views/search.ejs
+++ b/views/search.ejs
@@ -9,9 +9,11 @@
 					<div class="timeline-info">
 						<ul class="nav nav-tabs">
 							<li>
-								<a class="active" data-toggle="tab" href="#people">People</a>
+								<!-- <a class="active" data-toggle="tab" href="#people">People</a> -->
+								<!-- <a  data-toggle="tab" href="#people">People</a>
 								<a data-toggle="tab" href="#pages">Pages</a>
-								<a data-toggle="tab" href="#groups">Groups</a>
+								<a data-toggle="tab" href="#groups">Groups</a> -->
+								<center><h4>Results</h4></center>
 							</li>
 						</ul>
 					</div>
@@ -31,6 +33,9 @@
 									<div class="tab-content">
 										<div class="tab-pane active fade show" id="people">
 											<ul class="nearby-contct" id="search-results"></ul>
+										</div>
+										<div class="tab-pane active fade show" id="pages">
+											<ul class="nearby-contct" id="search-results-pages"></ul>
 										</div>
 									</div>
 								</div>
@@ -105,6 +110,45 @@
 
 					document.getElementById("search-results").innerHTML = html;
 
+					var html="";
+					for(var a=0;a<response.pages.length;a++){
+						var data=response.pages[a];
+						var isLiked=false;
+						for(var b=0;b<window.user.pages.length;b++){
+							var tempData=window.user.pages[b];
+							if(tempData._id.toString()==data._id.toString()){
+								isLiked=true;
+								break;
+							}
+						}
+						html += '<li>';
+							html += '<div class="nearly-pepls">';
+								html += '<figure>';
+										html+='<a href="/">';
+										html += '<img src="' + mainURL + '/' + data.coverPhoto + '">';
+									html += '</a>';
+								html += '</figure>';
+
+								html += '<div class="pepl-info">';
+									html += '<h4>';
+										html+='<a href="/">'+data.name+'</a>';
+									html += '</h4>';
+									if(isLiked){
+										html+='<a href="javascript:void(0);" data-id="'+data._id+'" onclick="toggleLikePage(this);" class="add-butn btn-unfriend">UnLike</a>';
+									}
+									else
+									{
+										html+='<a href="javascript:void(0);" data-id="'+data._id+'" onclick="toggleLikePage(this);" class="add-butn">Like</a>';
+									}
+
+								html += '</div>';
+							html += '</div>';
+						html += '</li>';
+
+
+					}
+					document.getElementById("search-results-pages").innerHTML = html;
+
 				} else {
 					alert(response.message);
 				}
@@ -114,6 +158,31 @@
 		var formData = new FormData();
 		formData.append("query", document.getElementById("query").value);
 		ajax.send(formData);
+	}
+	function toggleLikePage(self){
+		var ajax=new XMLHttpRequest();
+		ajax.open("POST","/toggleLikePage",true);
+		ajax.onreadystatechange=function(){
+			if(this.readyState==4&&this.status==200){
+				var response=JSON.parse(this.responseText);
+				if(response.status=="success"){
+					self.className="add-butn btn-unfriend";
+					self.innerHTML="UnLike";
+				}
+				if(response.status=="unliked"){
+					self.className="add-butn";
+					self.innerHTML="Like";
+				}
+				if(response.status=="error"){
+					alert(response.message);
+				}
+			}
+		};
+		var formData = new FormData();
+		formData.append("accessToken", localStorage.getItem("accessToken"));
+		formData.append("_id",self.getAttribute("data-id"));
+		ajax.send(formData);
+
 	}
 	function sendFriendRequest(self){
 		var _id=self.getAttribute("data-id");
