get groups done

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -53,6 +53,9 @@
 						if(typeof isRightSidebar!="undefined"&&isRightSidebar){
 							getMyPages();
 						}
+						if(typeof isGroups!="undefined"&&isGroups){
+							getGroups();
+						}
 
 					} else {
 						localStorage.removeItem("accessToken");
