--- a/views/createGroup.ejs
+++ b/views/createGroup.ejs
@@ -44,4 +44,27 @@
         </div>
     </div>
 </section>
+<script>
+    function createGroup(form){
+        form.submit.setAttribute("disabled","disabled");
+        var ajax=new XMLHttpRequest();
+        ajax.open("POST","/createGroup",true);
+        ajax.onreadystatechange=function(){
+            if(this.readyState==4&&this.status==200){
+                form.submit.removeAttribute("disabled");
+                var response=JSON.parse(this.responseText);
+                alert(response.message);
+                if(response.status=="success"){
+                    form.name.value="";
+                    form.additionalInfo.value="";
+                    form.coverPhoto.value="";
+                }
+            }
+        };
+        var formData=new FormData(form);
+        formData.append("accessToken",localStorage.getItem("accessToken"));
+        ajax.send(formData);
+        return false;
+    }
+</script>
 <%- include("includes/footer") %>
