--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -56,6 +56,9 @@
 						if(typeof isGroups!="undefined"&&isGroups){
 							getGroups();
 						}
+						if(typeof isGroupDetail!="undefined"&&isGroupDetail){
+							getGroupDetail();
+						}
 
 					} else {
 						localStorage.removeItem("accessToken");
