--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="/public/css/main.min.css">
 	<link rel="stylesheet" href="/public/css/style.css">
 	<link rel="stylesheet" href="/public/css/color.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -99,6 +100,11 @@
 								html += '<ins>' + data.shares.length + '</ins>';
 							html += '</span>';
 						html += '</li>';
+						html += '<li>';
+							html += '<span class="share" onclick="deletePost(this);" data-id="' + data._id + '">';
+								html += '<i class="fa fa-trash-o"></i>';
+							html += '</span>';
+						html += '</li>';
 
 					html += '</ul>';
 				html += '</div>';
@@ -137,6 +143,33 @@
 					formData.append("_id", _id);
 					ajax.send(formData);
 				}
+			}
+			function deletePost(self){
+				if (confirm("Are you sure you want to delete this post ?")) {
+					var _id = self.getAttribute("data-id");
+
+					var ajax = new XMLHttpRequest();
+					ajax.open("POST", "/deletePost", true);
+
+					ajax.onreadystatechange = function() {
+						if (this.readyState == 4 && this.status == 200) {
+
+							var response = JSON.parse(this.responseText);
+
+							alert(response.message);
+
+							if (response.status == "success") {
+								showNewsfeed();
+							}
+						}
+					};
+
+					var formData = new FormData();
+					formData.append("accessToken", localStorage.getItem("accessToken"));
+					formData.append("_id", _id);
+					ajax.send(formData);
+				}
+
 			}
 
 			function toggleLikePost(self) {
