--- a/views/singlePage.ejs
+++ b/views/singlePage.ejs
@@ -121,7 +121,7 @@
 									if (data.video != "") {
 										html += '<video style="height: 359px; width: 100%;" controls src="' + mainURL + "/" + data.video + '"></video>';
 									}
-									html += createLikesSection(data);
+									html += createLikesSectionpage(data);
 								html += '</div>';
 							html += '</div>';
 						html += '</div>';
@@ -135,6 +135,111 @@
         formData.append("_id",document.getElementById("_id").value);
         ajax.send(formData);
      }
+     function createLikesSectionpage(data){
+        var isLiked = false;
+				for (var b = 0; b < data.likers.length; b++) {
+					var liker = data.likers[b];
+					if (liker._id == window.user._id) {
+						isLiked = true;
+						break;
+					}
+				}
+
+				var html = "";
+
+				html += '<div class="we-video-info">';
+					html += '<ul>';
+
+						html += '<li>';
+
+							var className = "";
+							if (isLiked) {
+								className = "like";
+							} else {
+								className = "none";
+							}
+
+							html += '<span class="' + className + '" onclick="toggleLikePostpage(this);" data-id="' + data._id + '">';
+								html += '<i class="ti-thumb-up"></i>';
+								html += '<ins>' + data.likers.length + '</ins>';
+							html += '</span>';
+
+						html += '</li>';
+						html += '<li>';
+							html += '<span class="share" onclick="deletePostpage(this);" data-id="' + data._id + '">';
+								html += '<i class="fa fa-trash-o"></i>';
+							html += '</span>';
+						html += '</li>';
+
+					html += '</ul>';
+				html += '</div>';
+
+				return html;
+     }
+     function deletePostpage(self){
+				if (confirm("Are you sure you want to delete this post ?")) {
+					var _id = self.getAttribute("data-id");
+
+					var ajax = new XMLHttpRequest();
+					ajax.open("POST", "/deletePost", true);
+
+					ajax.onreadystatechange = function() {
+						if (this.readyState == 4 && this.status == 200) {
+
+							var response = JSON.parse(this.responseText);
+
+							alert(response.message);
+
+							if (response.status == "success") {
+								getPageDetail();
+							}
+						}
+					};
+
+					var formData = new FormData();
+					formData.append("accessToken", localStorage.getItem("accessToken"));
+					formData.append("_id", _id);
+					ajax.send(formData);
+				}
+
+			}
+     function toggleLikePostpage(self) {
+				var _id = self.getAttribute("data-id");
+
+				var ajax = new XMLHttpRequest();
+				ajax.open("POST", "/toggleLikePost", true);
+
+				ajax.onreadystatechange = function() {
+					if (this.readyState == 4 && this.status == 200) {
+
+						var response = JSON.parse(this.responseText);
+
+						if (response.status == "success") {
+							self.className = "like";
+
+							var likes = parseInt(self.querySelector("ins").innerHTML);
+							likes++;
+							self.querySelector("ins").innerHTML = likes;
+						}
+						if (response.status == "unliked") {
+							self.className = "none";
+
+							var likes = parseInt(self.querySelector("ins").innerHTML);
+							likes--;
+							self.querySelector("ins").innerHTML = likes;
+						}
+						if (response.status == "error") {
+							alert(response.message);
+						}
+					}
+				};
+
+				var formData = new FormData();
+				formData.append("accessToken", localStorage.getItem("accessToken"));
+				formData.append("_id", _id);
+				ajax.send(formData);
+			}
+
      function doPost(form){
          var ajax=new XMLHttpRequest();
          ajax.open("POST","/addPost",true);
