--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -59,6 +59,9 @@
 						if(typeof isGroupDetail!="undefined"&&isGroupDetail){
 							getGroupDetail();
 						}
+						if(typeof isNotifications!="undefined"&&isNotifications){
+							showNotifications();
+						}
 
 					} else {
 						localStorage.removeItem("accessToken");
