--- a/views/singleGroup.ejs
+++ b/views/singleGroup.ejs
@@ -11,18 +11,16 @@
             <div class="row merged">
                 <div class="col-md-9">
                     <div class="timeline-info"></div>
-                    <ul>
-                        <li class="admin-name">
-                            <h5 style="padding: 25px;" id="group-name"></h5>
-                        </li>
-                    </ul>
+                    <div class="admin-name">
+                        <h5 style="padding: 25px; color: #088dcd;" id="group-name"></h5>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
 <section>
-    <div class="gay gray-bg">
+    <div class="gap gray-bg">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
@@ -31,7 +29,7 @@
                             <%-include ("includes/left-sidebar") %>
                         </div>
                         <div class="col-md-6">
-                            <div class="add-post-box"></div>
+                            <div id="add-post-box"></div>
                             <div class="loadMore" id="newsfeed"></div>
                         </div>
                     </div>
@@ -65,6 +63,57 @@
                 if(isMember){
                     showAddPost();
                 }
+                var html="";
+                response.posts=response.posts.reverse();
+                for (var a = 0; a < response.posts.length; a++) {
+					var data = response.posts[a];
+
+					html += '<div class="central-meta item">';
+						html += '<div class="user-post">';
+							html += '<div class="friend-info">';
+
+								html += '<figure>';
+									html += '<img src="' + mainURL + "/" + data.uploader.profileImage + '" style="width: 45px; height: 45px; object-fit: cover;">';
+								html += '</figure>';
+
+								html += '<div class="friend-name">';
+									html += '<ins>';
+										
+											html += '<a href="/user/' + data.uploader._id + '">';
+												html += data.uploader.name;
+											html += '</a>';
+										
+									html += '</ins>';
+
+									var createdAt = new Date(data.createdAt);
+									var date = createdAt.getDate() + "";
+									date = date.padStart(2, "0") + " " + months[createdAt.getMonth()] + ", " + createdAt.getFullYear();
+
+									html += '<span>Published: ' + date + '</span>';
+								html += '</div>';
+
+								html += '<div class="post-meta">';
+
+									html += '<div class="description">';
+										html += '<p>';
+											html += data.caption;
+										html += '</p>';
+									html += '</div>';
+
+									if (data.image != "") {
+										html += '<img src="' + mainURL + "/" + data.image + '">';
+									}
+
+									if (data.video != "") {
+										html += '<video style="height: 359px; width: 100%;" controls src="' + mainURL + "/" + data.video + '"></video>';
+									}
+									html += createLikesSectiongroup(data);
+								html += '</div>';
+							html += '</div>';
+						html += '</div>';
+					html += '</div>';
+				}
+             document.getElementById("newsfeed").innerHTML=html;
             }
         }
         var formData=new FormData();
@@ -73,5 +122,133 @@
         ajax.send(formData);
 
     }
+    function createLikesSectiongroup(data){
+        var isLiked = false;
+				for (var b = 0; b < data.likers.length; b++) {
+					var liker = data.likers[b];
+					if (liker._id == window.user._id) {
+						isLiked = true;
+						break;
+					}
+				}
+
+				var html = "";
+
+				html += '<div class="we-video-info">';
+					html += '<ul>';
+
+						html += '<li>';
+
+							var className = "";
+							if (isLiked) {
+								className = "like";
+							} else {
+								className = "none";
+							}
+
+							html += '<span class="' + className + '" onclick="toggleLikePostgroup(this);" data-id="' + data._id + '">';
+								html += '<i class="ti-thumb-up"></i>';
+								html += '<ins>' + data.likers.length + '</ins>';
+							html += '</span>';
+
+						html += '</li>';
+						html += '<li>';
+							html += '<span class="share" onclick="deletePostgroup(this);" data-id="' + data._id + '">';
+								html += '<i class="fa fa-trash-o"></i>';
+							html += '</span>';
+						html += '</li>';
+
+					html += '</ul>';
+				html += '</div>';
+
+				return html;
+     }
+     function deletePostgroup(self){
+				if (confirm("Are you sure you want to delete this post ?")) {
+					var _id = self.getAttribute("data-id");
+
+					var ajax = new XMLHttpRequest();
+					ajax.open("POST", "/deletePost", true);
+
+					ajax.onreadystatechange = function() {
+						if (this.readyState == 4 && this.status == 200) {
+
+							var response = JSON.parse(this.responseText);
+
+							alert(response.message);
+
+							if (response.status == "success") {
+								getGroupDetail();
+							}
+						}
+					};
+
+					var formData = new FormData();
+					formData.append("accessToken", localStorage.getItem("accessToken"));
+					formData.append("_id", _id);
+					ajax.send(formData);
+				}
+
+			}
+     function toggleLikePostgroup(self) {
+				var _id = self.getAttribute("data-id");
+
+				var ajax = new XMLHttpRequest();
+				ajax.open("POST", "/toggleLikePost", true);
+
+				ajax.onreadystatechange = function() {
+					if (this.readyState == 4 && this.status == 200) {
+
+						var response = JSON.parse(this.responseText);
+
+						if (response.status == "success") {
+							self.className = "like";
+
+							var likes = parseInt(self.querySelector("ins").innerHTML);
+							likes++;
+							self.querySelector("ins").innerHTML = likes;
+						}
+						if (response.status == "unliked") {
+							self.className = "none";
+
+							var likes = parseInt(self.querySelector("ins").innerHTML);
+							likes--;
+							self.querySelector("ins").innerHTML = likes;
+						}
+						if (response.status == "error") {
+							alert(response.message);
+						}
+					}
+				};
+
+				var formData = new FormData();
+				formData.append("accessToken", localStorage.getItem("accessToken"));
+				formData.append("_id", _id);
+				ajax.send(formData);
+			}
+    function doPost(form){
+				var ajax=new XMLHttpRequest();
+				ajax.open("POST","/addPost",true);
+				ajax.onreadystatechange=function(){
+					if(this.readyState==4&&this.status==200){
+						var response=JSON.parse(this.responseText);
+						alert(response.message);
+						if(response.status="success"){
+							document.getElementById("form-add-post").querySelector("input[name='image']").value="";
+							document.getElementById("form-add-post").querySelector("input[name='video']").value="";		
+							document.getElementById("form-add-post").querySelector("textarea[name='caption']").value="";
+							document.getElementById("post-img-preview").style.display="none";
+							document.getElementById("post-video-preview").style.display="none";
+                            getGroupDetail();
+						}
+					}
+				};
+                form.type.value="group_post"
+				var formData=new FormData(form);
+				formData.append("accessToken",localStorage.getItem("accessToken"));
+                formData.append("_id",document.getElementById("_id").value);
+				ajax.send(formData);
+				return false;
+			}
 </script>
 <%- include ("includes/footer") %>
